# RenPy-Vita-8

./: .gitignore  .gitmodules  LICENSE  README.md
renpy-vita/: CMakeLists.txt  all_in_one.bash
renpy-vita/source/: main.c
